# GUIClaw

./: .gitignore  PRINCIPLES.md  README.md  SKILL.md  pyproject.toml
benchmarks/osworld/: README.md  eval_osworld_task.py  gimp_gpt55_run_errors.md  libreoffice_writer_gpt55_run_errors.md  multi_apps.md  os.md  run_batch.sh  run_osworld_task.py  thunderbird_gpt55_run_errors.md  vlc_gpt55_run_errors.md
docs/: README_CN.md  agentic-programming.md
gui_harness/: __init__.py  main.py  openprogram_compat.py  runtime.py  utils.py
gui_harness/action/: general_action.py
gui_harness/functions/: act.py  learn.py  observe.py  verify.py
gui_harness/planning/: component_memory.py  create.py  learn.py  navigate.py  observe.py  remember.py  verify.py
gui_harness/primitives/: vm_adapter.py
gui_harness/tasks/: execute_task.py  read_messages.py  send_message.py
plugin/: index.js
plugins/gui-report-hook/: index.js  openclaw.plugin.json
scripts/: agent.py  app_memory.py  platform_input.py  setup.sh  ui_detector.py
skills/gui-act/: DESIGN.md  SKILL.md
skills/gui-learn/: SKILL.md
skills/gui-memory/: SKILL.md
skills/gui-observe/: DESIGN.md
skills/gui-report/: DESIGN.md  SKILL.md
skills/gui-report/logs/: task_history.jsonl
skills/gui-report/scripts/: tracker.py
skills/gui-setup/: DESIGN.md  SKILL.md
tests/: conftest.py  test_app_memory.py  test_component_memory.py  test_image_context.py  test_parse_json.py
